# language-ocaml

./: .gitignore  LICENSE  README.md  cabal.project  config.nix  default.nix  language-ocaml.cabal  package.yaml  shell.nix  stack-shell.nix  stack.yaml
.circleci/: config.yml
.github/workflows/: build.yaml
lib/Language/OCaml/: Parser.hs  PrettyPrinter.hs  Utils.hs
lib/Language/OCaml/Definitions/Parsing/: ASTTypes.hs  Docstrings.hs  Location.hs  Longident.hs  ParseTree.hs
lib/Language/OCaml/Definitions/Parsing/ASTHelper/: Common.hs  Exception.hs  Exp.hs  Mb.hs  Mod.hs  Mtd.hs  Mty.hs  Opn.hs  Pat.hs  Sig.hs  Str.hs  Te.hs  Typ.hs  Type.hs  Val.hs  Vb.hs
lib/Language/OCaml/Definitions/Parsing/Parser/: LetBinding.hs  LetBindings.hs
lib/Language/OCaml/Definitions/StdLib/: Lexing.hs  Parsing.hs
lib/Language/OCaml/Parser/: AndTypeDeclaration.hs  AttrId.hs  Attribute.hs  Attributes.hs  BarConstructorDeclaration.hs  Common.hs  Constant.hs  ConstrIdent.hs  ConstrLongident.hs  ConstructorArguments.hs  ConstructorDeclaration.hs  ConstructorDeclarations.hs  CoreType.hs  CoreType2.hs  CoreTypeCommaList.hs  CoreTypeList.hs  CoreTypeNoAttr.hs  Expr.hs  ExprCommaList.hs  ExprSemiList.hs  FunBinding.hs  FunDef.hs  GeneralizedConstructorArguments.hs  Implementation.hs  Internal.hs  Label.hs  LabelDeclaration.hs  LabelDeclarationSemi.hs  LabelDeclarations.hs  LabelLongident.hs  LabeledSimpleExpr.hs  LabeledSimplePattern.hs  LblExpr.hs  LblExprList.hs  LblPattern.hs  LblPatternList.hs  LetBinding.hs  LetBindingBody.hs  LetBindings.hs  MatchCase.hs  (+58 more)
lib/Language/OCaml/Parser/Generator/: Lexer.x  Parser.y
lib/Language/OCaml/Parser/Utils/: Combinators.hs  Types.hs  Utils.hs
lib/Language/OCaml/PrettyPrinter/: ArgLabel.hs  Case.hs  Constant.hs  ConstructorArguments.hs  ConstructorDeclaration.hs  CoreType.hs  CoreTypeDesc.hs  Expression.hs  ExpressionDesc.hs  Internal.hs  LabelDeclaration.hs  Loc.hs  Longident.hs  ModuleBinding.hs  ModuleExpr.hs  ModuleExprDesc.hs  MutableFlag.hs  OpenDescription.hs  OverrideFlag.hs  Pattern.hs  PatternDesc.hs  Payload.hs  RecFlag.hs  Structure.hs  StructureItem.hs  StructureItemDesc.hs  TypeDeclaration.hs  ValueBinding.hs  Variance.hs
nix/: sources.json
test/: .gitignore  Main.hs
test/Language/OCaml/Parser/: TestStrings.hs  TestUtils.hs
test/Language/OCaml/Parser/AndLetBinding/: Test.hs
test/Language/OCaml/Parser/AttrId/: Test.hs
test/Language/OCaml/Parser/Attribute/: Test.hs
test/Language/OCaml/Parser/Attributes/: Test.hs
test/Language/OCaml/Parser/Common/: Test.hs
test/Language/OCaml/Parser/Constant/: Test.hs
test/Language/OCaml/Parser/ConstrIdent/: Test.hs
test/Language/OCaml/Parser/ConstrLongident/: Test.hs
test/Language/OCaml/Parser/CoreType/: Test.hs
test/Language/OCaml/Parser/CoreType2/: Test.hs
test/Language/OCaml/Parser/CoreTypeNoAttr/: Test.hs
test/Language/OCaml/Parser/Expr/: Test.hs
test/Language/OCaml/Parser/ExtAttributes/: Test.hs
test/Language/OCaml/Parser/Generator/Expr/: Test.hs
test/Language/OCaml/Parser/Generator/Implementation/: Test.hs
test/Language/OCaml/Parser/Generator/LetBinding/: Test.hs
test/Language/OCaml/Parser/Generator/SeqExpr/: Test.hs
test/Language/OCaml/Parser/Generator/SimpleExpr/: Test.hs
test/Language/OCaml/Parser/Generator/Structure/: Test.hs
test/Language/OCaml/Parser/Generator/ValLongident/: Test.hs
test/Language/OCaml/Parser/Ident/: Test.hs
test/Language/OCaml/Parser/Implementation/: Test.hs  test_00.ml  test_01.ml  test_02.ml  test_03.ml  test_04.ml  test_05.ml  test_06.ml  test_07.ml  test_08.ml
test/Language/OCaml/Parser/Int/: Test.hs
test/Language/OCaml/Parser/LetBinding/: Test.hs
test/Language/OCaml/Parser/LetBindingBody/: Test.hs
test/Language/OCaml/Parser/LetBindings/: Test.hs
test/Language/OCaml/Parser/MatchCase/: Test.hs
test/Language/OCaml/Parser/ModLongident/: Test.hs
test/Language/OCaml/Parser/OpenStatement/: Test.hs
test/Language/OCaml/Parser/Operator/: Test.hs
test/Language/OCaml/Parser/Pattern/: Test.hs
test/Language/OCaml/Parser/Payload/: Test.hs
test/Language/OCaml/Parser/PostItemAttribute/: Test.hs
test/Language/OCaml/Parser/PostItemAttributes/: Test.hs
test/Language/OCaml/Parser/RecFlag/: Test.hs
test/Language/OCaml/Parser/SeqExpr/: Test.hs
test/Language/OCaml/Parser/SimpleCoreType/: Test.hs
test/Language/OCaml/Parser/SimpleCoreType2/: Test.hs
test/Language/OCaml/Parser/SimpleCoreTypeOrTuple/: Test.hs
test/Language/OCaml/Parser/SimpleExpr/: Test.hs
test/Language/OCaml/Parser/SimplePattern/: Test.hs
test/Language/OCaml/Parser/SimplePatternNotIdent/: Test.hs
test/Language/OCaml/Parser/SingleAttrId/: Test.hs
test/Language/OCaml/Parser/StrictBinding/: Test.hs
test/Language/OCaml/Parser/Structure/: Test.hs
test/Language/OCaml/Parser/StructureItem/: Test.hs
test/Language/OCaml/Parser/StructureTail/: Test.hs
test/Language/OCaml/Parser/Tokens/: Test.hs
test/Language/OCaml/Parser/ValIdent/: Test.hs
test/Language/OCaml/Parser/ValLongident/: Test.hs
test/Language/OCaml/PrettyPrinter/: TestUtils.hs
test/Language/OCaml/PrettyPrinter/Structure/: Test.hs
test/Language/OCaml/PrettyPrinter/StructureItem/: Test.hs
