Name:          language-ocaml
Version:       0.1.12
Synopsis:      Language tools for manipulating OCaml programs in Haskell (parser, pretty-printer, ...)
Description:   Language tools for manipulating OCaml programs in Haskell (parser, pretty-printer, ...)
License:       MIT
License-file:  LICENSE
Author:        Valentin Robert
Maintainer:    valentin.robert.42@gmail.com
Stability:     Experimental
Category:      Language, OCaml
Build-type:    Simple
Cabal-version: >=1.22

Source-repository head
  type:     git
  location: https://github.com/Ptival/language-ocaml

Library
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-orphans
  hs-source-dirs:   lib, test
  pkgconfig-depends: zlib
  build-depends: base                      >= 4.0   && < 4.10,
                 data-default              >= 0.7   && < 0.8,
                 megaparsec                >= 5.0   && < 5.4,
                 prettyprinter             >= 1.2   && < 1.3,
                 string-qq                 >= 0.0   && < 0.1,
                 tasty                     >= 0.11  && < 0.12,
                 tasty-hunit               >= 0.9   && < 0.10
  exposed-modules: Language.OCaml.Parser.Common
                   Language.OCaml.Definitions.Parsing.ASTTypes
                   Language.OCaml.Definitions.Parsing.ParseTree
                   Language.OCaml.Parser
                   Language.OCaml.Parser.Internal
                   Language.OCaml.PrettyPrinter
                   Language.OCaml.PrettyPrinter.Internal
  other-modules:   Language.OCaml.Definitions.Parsing.Docstrings
                   Language.OCaml.Definitions.Parsing.Location
                   Language.OCaml.Definitions.Parsing.Parser.LetBinding
                   Language.OCaml.Definitions.Parsing.Parser.LetBindings
                   Language.OCaml.Definitions.StdLib.Lexing
                   Language.OCaml.Definitions.StdLib.Parsing
                   Language.OCaml.Parser.AndTypeDeclaration
                   Language.OCaml.Parser.AttrId
                   Language.OCaml.Parser.BarConstructorDeclaration
                   Language.OCaml.Parser.Constant
                   Language.OCaml.Parser.ConstrIdent
                   Language.OCaml.Parser.ConstrLongident
                   Language.OCaml.Parser.ConstructorArguments
                   Language.OCaml.Parser.ConstructorDeclaration
                   Language.OCaml.Parser.ConstructorDeclarations
                   Language.OCaml.Parser.CoreType
                   Language.OCaml.Parser.CoreType2
                   Language.OCaml.Parser.CoreTypeList
                   Language.OCaml.Parser.CoreTypeNoAttr
                   Language.OCaml.Parser.Expr
                   Language.OCaml.Parser.FunBinding
                   Language.OCaml.Parser.GeneralizedConstructorArguments
                   Language.OCaml.Parser.Implementation
                   Language.OCaml.Parser.Label
                   Language.OCaml.Parser.LabelDeclaration
                   Language.OCaml.Parser.LabelDeclarationSemi
                   Language.OCaml.Parser.LabelDeclarations
                   Language.OCaml.Parser.LabelLongident
                   Language.OCaml.Parser.LabeledSimpleExpr
                   Language.OCaml.Parser.LabeledSimplePattern
                   Language.OCaml.Parser.LetBinding
                   Language.OCaml.Parser.LetBindingBody
                   Language.OCaml.Parser.LetBindings
                   Language.OCaml.Parser.MatchCase
                   Language.OCaml.Parser.MatchCases
                   Language.OCaml.Parser.ModExtLongident
                   Language.OCaml.Parser.ModLongident
                   Language.OCaml.Parser.ModuleBinding
                   Language.OCaml.Parser.ModuleBindingBody
                   Language.OCaml.Parser.ModuleExpr
                   Language.OCaml.Parser.MutableFlag
                   Language.OCaml.Parser.NonrecFlag
                   Language.OCaml.Parser.OpenStatement
                   Language.OCaml.Parser.Operator
                   Language.OCaml.Parser.OptBar
                   Language.OCaml.Parser.Override_flag
                   Language.OCaml.Parser.Pattern
                   Language.OCaml.Parser.PatternGen
                   Language.OCaml.Parser.PatternNoExn
                   Language.OCaml.Parser.Payload
                   Language.OCaml.Parser.PolyTypeNoAttr
                   Language.OCaml.Parser.PostItemAttribute
                   Language.OCaml.Parser.PostItemAttributes
                   Language.OCaml.Parser.PrivateFlag
                   Language.OCaml.Parser.RecFlag
                   Language.OCaml.Parser.SeqExpr
                   Language.OCaml.Parser.SimpleCoreType
                   Language.OCaml.Parser.SimpleCoreType2
                   Language.OCaml.Parser.SimpleCoreTypeOrTuple
                   Language.OCaml.Parser.SimpleExpr
                   Language.OCaml.Parser.SimplePattern
                   Language.OCaml.Parser.SimpleLabeledExprList
                   Language.OCaml.Parser.SimplePatternNotIdent
                   Language.OCaml.Parser.SingleAttrId
                   Language.OCaml.Parser.StrictBinding
                   Language.OCaml.Parser.Structure
                   Language.OCaml.Parser.StructureItem
                   Language.OCaml.Parser.TestUtils
                   Language.OCaml.Parser.Tokens
                   Language.OCaml.Parser.TypeConstraint
                   Language.OCaml.Parser.TypeDeclaration
                   Language.OCaml.Parser.TypeDeclarations
                   Language.OCaml.Parser.TypeKind
                   Language.OCaml.Parser.TypeLongident
                   Language.OCaml.Parser.Utils.Combinators
                   Language.OCaml.Parser.Utils.Utils
                   Language.OCaml.Parser.ValIdent
                   Language.OCaml.Parser.ValLongident
                   Language.OCaml.PrettyPrinter.ArgLabel
                   Language.OCaml.PrettyPrinter.Case
                   Language.OCaml.PrettyPrinter.Constant
                   Language.OCaml.PrettyPrinter.ConstructorArguments
                   Language.OCaml.PrettyPrinter.ConstructorDeclaration
                   Language.OCaml.PrettyPrinter.CoreType
                   Language.OCaml.PrettyPrinter.CoreTypeDesc
                   Language.OCaml.PrettyPrinter.Expression
                   Language.OCaml.PrettyPrinter.ExpressionDesc
                   Language.OCaml.PrettyPrinter.LabelDeclaration
                   Language.OCaml.PrettyPrinter.Loc
                   Language.OCaml.PrettyPrinter.Longident
                   Language.OCaml.PrettyPrinter.ModuleBinding
                   Language.OCaml.PrettyPrinter.ModuleExpr
                   Language.OCaml.PrettyPrinter.ModuleExprDesc
                   Language.OCaml.PrettyPrinter.MutableFlag
                   Language.OCaml.PrettyPrinter.OpenDescription
                   Language.OCaml.PrettyPrinter.OverrideFlag
                   Language.OCaml.PrettyPrinter.Pattern
                   Language.OCaml.PrettyPrinter.PatternDesc
                   Language.OCaml.PrettyPrinter.Payload
                   Language.OCaml.PrettyPrinter.RecFlag
                   Language.OCaml.PrettyPrinter.Structure
                   Language.OCaml.PrettyPrinter.StructureItem
                   Language.OCaml.PrettyPrinter.StructureItemDesc
                   Language.OCaml.PrettyPrinter.TypeDeclaration
                   Language.OCaml.PrettyPrinter.ValueBinding

Test-suite Test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends: language-ocaml,
                 base                      >= 4.9   && < 4.10,
                 megaparsec                >= 5.0   && < 5.4,
                 prettyprinter             >= 1.2   && < 1.3,
                 string-qq                 >= 0.0   && < 0.1,
                 tasty                     >= 0.11  && < 0.12,
                 tasty-hunit               >= 0.9   && < 0.10
  other-modules:   Language.OCaml.Parser.Common.Test
                   Language.OCaml.Parser.ConstrLongident.Test
                   Language.OCaml.Parser.Expr.Test
                   Language.OCaml.Parser.Implementation.Test
                   Language.OCaml.Parser.MatchCase.Test
                   Language.OCaml.Parser.ModLongident.Test
                   Language.OCaml.Parser.OpenStatement.Test
                   Language.OCaml.Parser.Pattern.Test
                   Language.OCaml.Parser.SeqExpr.Test
                   Language.OCaml.Parser.SimpleExpr.Test
                   Language.OCaml.Parser.SimplePattern.Test
                   Language.OCaml.Parser.Structure.Test
                   Language.OCaml.Parser.StructureItem.Test
                   Language.OCaml.Parser.TestUtils
                   Language.OCaml.Parser.Tokens.Test
                   Language.OCaml.Parser.ValIdent.Test
                   Language.OCaml.Parser.ValLongident.Test
                   Language.OCaml.PrettyPrinter.Structure.Test
                   Language.OCaml.PrettyPrinter.StructureItem.Test
                   Language.OCaml.PrettyPrinter.TestUtils
